--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,74 @@
 spring.application.name=connectcampus
 
+# =========================
+# Server
+# =========================
+server.port=8080
+
+# =========================
+# DataSource (PostgreSQL)
+# =========================
+spring.datasource.url=jdbc:postgresql://localhost:5432/connectcampus
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# HikariCP (defaults are fine; these help in dev)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.pool-name=Hikari-ConnectCampus
+
+# =========================
+# JPA / Hibernate
+# =========================
+# For development. In prod, prefer: validate (with Flyway)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+# Optional: Hibernate will usually auto-detect, but you can pin the dialect:
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# =========================
+# Flyway (migrations in classpath:db/migration)
+# =========================
+spring.flyway.enabled=false
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+
+# =========================
+# JWT (used by JwtService)
+# =========================
+jwt.issuer=connectcampus
+# MUST be >= 32 bytes for HS256. Change before committing.
+jwt.secret=15738cf5d0dff19c0f3e4bf95bcee101
+jwt.expiryMinutes=120
+
+# =========================
+# Springdoc OpenAPI
+# =========================
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui
+
+# =========================
+# Multipart (if you ever upload images/files)
+# =========================
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# =========================
+# Logging (dev friendly)
+# =========================
+logging.level.org.hibernate.SQL=DEBUG
+# Parameter bindings (can be noisy):
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+# email sender (optional; if not set, emails are logged)
+app.mail.from=noreply@connectcampus.local
+# link base used in reset emails (point this to your React route)
+app.reset.base-url=http://localhost:5173/reset-password
+app.reset.expiry-minutes=30
+
+# Optional: fallback for college contact when college.email is not set
+app.admin.email=admin@connectcampus.local
+
